Changed all files

--- a/contactus.html
+++ b/contactus.html
@@ -5,7 +5,7 @@
      <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head 
+    <!-- The above 3 meta tags *must* come first in the head; any other head
          content must come *after* these tags -->
     <title>Ristorante Con Fusion: About Us</title>
         <!-- Bootstrap -->
@@ -58,9 +58,23 @@
                     </li>
                     <li class="active"><a href="#"><i class="fa fa-envelope-o"></i> Contact</a></li>
                 </ul>
+                <form class="navbar-form navbar-right" role="search">
+                  <div class="form-group">
+                    <input type="email" class="form-control" name="username" placeholder="Email" required>
+                  </div>
+                  <div class="form-group">
+                    <input type="password" class="form-control" name="password" placeholder="Password" required>
+                  </div>
+                  <div class="form-group">
+                    <label class="checkbox-inline">
+                    <input type="checkbox" name="remember" id="remember"><label for="remember" style="color:white">Remember Me</label>
+                  </label>
+                  </div>
+                  <button type="submit" class="btn btn-sm btn-info"><strong>Sign In</strong></button>
+                </form>
             </div>
         </div>
-    </nav>  
+    </nav>
     <header class="jumbotron">
 
         <!-- Main component for a primary marketing message or call to action -->
@@ -91,10 +105,10 @@
                <hr>
             </div>
         </div>
-        
+
         <div class="row row-content">
            <div class="col-xs-12">
-              <h3>Location Information</h3> 
+              <h3>Location Information</h3>
            </div>
             <div class="col-xs-12 col-sm-4 col-sm-offset-1">
                    <h5>Our Address</h5>
@@ -104,7 +118,7 @@
 		              HONG KONG<br>
 		              <i class="fa fa-phone"></i>: +852 1234 5678<br>
 		              <i class="fa fa-fax"></i>: +852 8765 4321<br>
-		              <i class="fa fa-envelope"></i>: 
+		              <i class="fa fa-envelope"></i>:
                         <a href="mailto:confusion@food.net">confusion@food.net</a>
 		           </address>
             </div>
@@ -122,7 +136,7 @@
 
         <div class="row row-content">
            <div class="col-xs-12">
-              <h3>Send us your Feedback</h3> 
+              <h3>Send us your Feedback</h3>
            </div>
             <div class="col-xs-12 col-sm-9">
                 <form class="form-horizontal" role="form">
@@ -150,7 +164,7 @@
 				<div>
 					<div class="col-xs-7 col-sm-6 col-md-7">
 					<input type="tel" class="form-control" id="telnum" name="telnum" placeholder="Tel Number">
-					</div>	
+					</div>
 				</div>
 			</div>
 			<div class="form-group">
@@ -172,13 +186,13 @@
 					<option>Email</option>
 				</select>
 				</div>
-			</div>	
+			</div>
 			<div class="form-group">
 				<label for="feedback" class="col-sm-2 control-label">Your Feedback</label>
 				<div class="col-sm-10">
 					<textarea class="form-control" id="feedback" name="feedback" rows="12"></textarea>
 				</div>
-			</div>					
+			</div>
 			<div class="form-group">
 				<div class="col-sm-offset-2 col-sm-10">
 					<button type="submit" class="btn btn-primary">Send Feedback</button>
@@ -195,7 +209,7 @@
 
     <footer class="row-footer">
         <div class="container">
-            <div class="row">             
+            <div class="row">
                 <div class="col-xs-5 col-xs-offset-1 col-sm-2 col-sm-offset-1">
                     <h5>Links</h5>
                     <ul class="list-unstyled">
@@ -213,7 +227,7 @@
 		              HONG KONG<br>
 		              <i class="fa fa-phone"></i>: +852 1234 5678<br>
 		              <i class="fa fa-fax"></i>: +852 8765 4321<br>
-		              <i class="fa fa-envelope"></i>: 
+		              <i class="fa fa-envelope"></i>:
                         <a href="mailto:confusion@food.net">confusion@food.net</a>
 		           </address>
                 </div>
