--- a/index.html
+++ b/index.html
@@ -56,9 +56,11 @@
 					<input type="password" class="form-control" name="password" placeholder="Password" required>
 				</div>
 				<div class="form-group">
-					<input type="checkbox" class="form-control" name="remember" id="remember"><label for="remember" style="color:white">Remember Me</label>
+					<label class="checkbox-inline">
+					<input type="checkbox" name="remember" id="remember"><label for="remember" style="color:white">Remember Me</label>
+				</label>
 				</div>
-				<button type="submit" class="btn btn-sm btn-info">Sign In</button>
+				<button type="submit" class="btn btn-sm btn-info"><strong>Sign In</strong></button>
 			</form>
 			</div>
 		</div>
@@ -84,7 +86,7 @@
 		<div class="col-xs-12 col-sm-2">
 			<p style="padding:40px"></p>
 			<a href="#reservation">
-				<button class="btn btn-warning">Reserve Table</button>
+				<button class="btn btn-warning"><strong>Reserve Table</strong></button>
 			</a>
 		</div>
             </div>
@@ -112,7 +114,7 @@
 			<div class="media-body">
 		<h2 class="media-heading">Uthappizza<span class="label label-danger">Hot</span><span class="badge"> $4.99</span></h2>
                 <p>A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola olives, ripe vine cherry tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.</p>
-                <p><a  class="btn btn-primary btn-xs" href="#">More &raquo;</a></p>
+                <p><a  class="btn btn-primary btn-xs" href="#"><strong>More &raquo;</strong></a></p>
 			</div>
 		</div>
             </div>
@@ -128,7 +130,7 @@
 								<div class="media-body">
 									<h2 class="media-heading">Weekend Grand Buffet<span class="label label-danger">New</span></h2>
                 <p>Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
-                <p><a class="btn btn-primary btn-xs" href="#">More &raquo;</a></p>
+                <p><a class="btn btn-primary btn-xs" href="#"><strong>More &raquo;</strong></a></p>
 							</div>
 							<div class="media-right media-middle">
 									<a href="#">
@@ -155,7 +157,7 @@
                 <h2 class="media-heading">Alberto Somayya</h2>
                 <h4>Executive Chef</h4>
                 <p>Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion experiences. </p>
-                <p><a class="btn btn-primary btn-xs" href="#">More &raquo;</a></p>
+                <p><a class="btn btn-primary btn-xs" href="#"><strong>More &raquo;</strong></a></p>
 			</div>
 		</div>
             </div>
@@ -214,13 +216,13 @@
 						<p style="padding:20px"></p>
 					</div>
 					<div class="col-sm-10">
-						<button type="submit" class="btn btn-primary">Reserve</button>
+						<button type="submit" class="btn btn-primary"><strong>Reserve</strong></button>
 					</div>
 				</div>
 				<div class="alert alert-warning alert-dismissible" role="alert">
 					<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span>
 				</button>
-				Warning:: Please <a href="+852 1234 5678">call</a> us to reserve for more than six guests
+				Warning:: Please <a href="+852 1234 5678"><strong>call</strong></a> us to reserve for more than six guests
 			</div>
 			</form>
 		</div>
