--- a/about_us.html
+++ b/about_us.html
@@ -3,7 +3,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head 
+    <!-- The above 3 meta tags *must* come first in the head; any other head
          content must come *after* these tags -->
     <title>Ristorante Con Fusion: About Us</title>
         <!-- Bootstrap -->
@@ -53,9 +53,23 @@
                     </li>
                     <li><a href="contactus.html"><i class="fa fa-envelope-o"></i> Contact</a></li>
                 </ul>
+                <form class="navbar-form navbar-right" role="search">
+                  <div class="form-group">
+                    <input type="email" class="form-control" name="username" placeholder="Email" required>
+                  </div>
+                  <div class="form-group">
+                    <input type="password" class="form-control" name="password" placeholder="Password" required>
+                  </div>
+                  <div class="form-group">
+                    <label class="checkbox-inline">
+                    <input type="checkbox" name="remember" id="remember"><label for="remember" style="color:white">Remember Me</label>
+                  </label>
+                  </div>
+                  <button type="submit" class="btn btn-sm btn-info"><strong>Sign In</strong></button>
+                </form>
             </div>
         </div>
-    </nav>  
+    </nav>
     <header class="jumbotron">
 
         <!-- Main component for a primary marketing message or call to action -->
@@ -65,8 +79,8 @@
                 <div class="col-xs-12 col-sm-8">
                     <h1>Ristorante con Fusion</h1>
                     <p style="padding:40px;"></p>
-                    <p>We take inspiration from the World's best 
-cuisines, and create a unique fusion experience. Our lipsmacking 
+                    <p>We take inspiration from the World's best
+cuisines, and create a unique fusion experience. Our lipsmacking
 creations will tickle your culinary senses!</p>
                 </div>
                 <div class="col-xs-12 col-sm-4">
@@ -88,18 +102,18 @@ creations will tickle your culinary senses!</p>
                <hr>
             </div>
         </div>
-        
+
         <div class="row row-content">
             <div class="col-xs-12 col-sm-8">
                 <h2>Our History</h2>
-                <p>Started in 2010, Ristorante con Fusion quickly 
-established itself as a culinary icon par excellence in Hong Kong. With 
+                <p>Started in 2010, Ristorante con Fusion quickly
+established itself as a culinary icon par excellence in Hong Kong. With
 its unique brand of world fusion cuisine that can be found nowhere else,
- it enjoys patronage from the A-list clientele in Hong Kong.  Featuring 
-four of the best three-star Michelin chefs in the world, you never know 
+ it enjoys patronage from the A-list clientele in Hong Kong.  Featuring
+four of the best three-star Michelin chefs in the world, you never know
 what will arrive on your plate the next time you visit us.</p>
                 <p>The restaurant traces its humble beginnings to <em>The Frying Pan</em>, a successful chain started by our CEO, Mr. Peter Pan, that featured for the first time the world's best cuisines in a pan.</p>
-		
+
 		<div class="well">
 			<blockquote>
 				<p>You better cut the pizza in four pieces because I'm not hungry enough to eat six.</p>
@@ -135,27 +149,27 @@ what will arrive on your plate the next time you visit us.</p>
             <div class="col-xs-12">
                 <h2>Corporate Leadership</h2>
                 <h3>Peter Pan <small>Chief Epicurious Officer</small></h3>
-                <p>Our CEO, Peter, credits his hardworking East Asian 
-immigrant parents who undertook the arduous journey to the shores of 
+                <p>Our CEO, Peter, credits his hardworking East Asian
+immigrant parents who undertook the arduous journey to the shores of
 America with the intention of giving their children the best future. His
- mother's wizardy in the kitchen whipping up the tastiest dishes with 
-whatever is available inexpensively at the supermarket, was his first 
+ mother's wizardy in the kitchen whipping up the tastiest dishes with
+whatever is available inexpensively at the supermarket, was his first
 inspiration to create the fusion cuisines for which <em>The Frying Pan</em> became well known. He brings his zeal for fusion cuisines to this restaurant, pioneering cross-cultural culinary connections.</p>
                 <h3>Dhanasekaran Witherspoon <small>Chief Food Officer</small></h3>
-                <p>Our CFO, Danny, as he is affectionately referred to 
-by his colleagues, comes from a long established family tradition in 
-farming and produce. His experiences growing up on a farm in the 
-Australian outback gave him great appreciation for varieties of food 
+                <p>Our CFO, Danny, as he is affectionately referred to
+by his colleagues, comes from a long established family tradition in
+farming and produce. His experiences growing up on a farm in the
+Australian outback gave him great appreciation for varieties of food
 sources. As he puts it in his own words, <em>Everything that runs, wins, and everything that stays, pays!</em></p>
                 <h3>Agumbe Tang <small>Chief Taste Officer</small></h3>
-                <p>Blessed with the most discerning gustatory sense, 
-Agumbe, our CFO, personally ensures that every dish that we serve meets 
-his exacting tastes. Our chefs dread the tongue lashing that ensues if 
+                <p>Blessed with the most discerning gustatory sense,
+Agumbe, our CFO, personally ensures that every dish that we serve meets
+his exacting tastes. Our chefs dread the tongue lashing that ensues if
 their dish does not meet his exacting standards. He lives by his motto, <em>You click only if you survive my lick.</em></p>
                 <h3>Alberto Somayya <small>Executive Chef</small></h3>
-                <p>Award winning three-star Michelin chef with wide 
-International experience having worked closely with whos-who in the 
-culinary world, he specializes in creating mouthwatering Indo-Italian 
+                <p>Award winning three-star Michelin chef with wide
+International experience having worked closely with whos-who in the
+culinary world, he specializes in creating mouthwatering Indo-Italian
 fusion experiences. He says, <em>Put together the cuisines from the two craziest cultures, and you get a winning hit! Amma Mia!</em></p>
             </div>
              <div class="col-xs-12">
@@ -168,7 +182,7 @@ fusion experiences. He says, <em>Put together the cuisines from the two craziest
 			<div class="table-responsive">
 			<table class="table table-striped">
 				<tr>
-					<td>		
+					<td>
 						&nbsp;
 					</td>
 					<th>
@@ -201,7 +215,7 @@ fusion experiences. He says, <em>Put together the cuisines from the two craziest
 					</th>
 					<td>15000</td>
 					<td>45000</td>
-					<td>100000</td>	
+					<td>100000</td>
 				</tr>
 				<tr>
 					<th>Special Events</th>
@@ -218,12 +232,12 @@ fusion experiences. He says, <em>Put together the cuisines from the two craziest
 			</table>
 			</div>
 		</div>
-		</div>		
+		</div>
     </div>
 
     <footer class="row-footer">
         <div class="container">
-            <div class="row">             
+            <div class="row">
                 <div class="col-xs-5 col-xs-offset-1 col-sm-2 col-sm-offset-1">
                     <h5>Links</h5>
                     <ul class="list-unstyled">
@@ -241,7 +255,7 @@ fusion experiences. He says, <em>Put together the cuisines from the two craziest
 		              HONG KONG<br>
 		              <i class="fa fa-phone"></i>: +852 1234 5678<br>
 		              <i class="fa fa-fax"></i>: +852 8765 4321<br>
-		              <i class="fa fa-envelope"></i>: 
+		              <i class="fa fa-envelope"></i>:
                         <a href="mailto:confusion@food.net">confusion@food.net</a>
 		           </address>
                 </div>
